# Spezielle-Gebiete-zum-Softwareengineering

./: .gitignore
Gesichtserkennung/: CMakeLists.txt  KlassenMethodenVariabeln.txt  LICENSE  README.md  main.cpp  settings.json
Gesichtserkennung/DataLoader/: JSONSettings.cpp  JSONSettings.h  MySQLController.cpp  MySQLController.h
Gesichtserkennung/Handler/: FileHandler.cpp  FileHandler.h  ImageHandler.cpp  ImageHandler.h
Gesichtserkennung/Models/: User.cpp  User.h
Gesichtserkennung/Network/: MQTTClientCpp.cpp  MQTTClientCpp.h
Gesichtserkennung/OpenCV Modules/: FaceDetection.cpp  FaceDetection.h  PersonRecognizer.cpp  PersonRecognizer.h
Gesichtserkennung/OpenCV RPi Binaries/: OpenCV-3.2.0-armv7l-dev.deb  OpenCV-3.2.0-armv7l-main.deb
Gesichtserkennung/Pictures/Justin/: img20170625195053_1.pgm  img20170625195055_1.pgm  img20170625195056_1.pgm  img20170625195100_1.pgm  img20170625195106_1.pgm  img20170625195109_1.pgm  img20170625195118_1.pgm  img20170625195127_1.pgm
Gesichtserkennung/RPI/: RPiController.cpp  RPiController.h
Gesichtserkennung/docs/: Doxyfile
Gesichtserkennung/docs/html/: _face_detection_8cpp.html  _face_detection_8h.html  _face_detection_8h_source.html  _file_handler_8cpp.html  _file_handler_8h.html  _file_handler_8h_source.html  _image_handler_8cpp.html  _image_handler_8h.html  _image_handler_8h_source.html  _j_s_o_n_settings_8cpp.html  _j_s_o_n_settings_8h.html  _j_s_o_n_settings_8h_source.html  _m_q_t_t_client_cpp_8cpp.html  _m_q_t_t_client_cpp_8h.html  _m_q_t_t_client_cpp_8h_source.html  _my_s_q_l_controller_8cpp.html  _my_s_q_l_controller_8h.html  _my_s_q_l_controller_8h_source.html  _person_recognizer_8cpp.html  _person_recognizer_8h.html  _person_recognizer_8h_source.html  _r_pi_controller_8cpp.html  _r_pi_controller_8h.html  _r_pi_controller_8h_source.html  _user_8cpp.html  _user_8h.html  _user_8h_source.html  annotated.html  class_face_detection-members.html  (+37 more)
(+140 files in other folders)
